Search is now functional on the main page Added functionality for avatars for ClientMedia Altered some behaviors regarding Client Altered database settings to ignore stop words Search needs another update to fix image functionality

--- a/ClientManagerWebAPI/wwwroot/client-search/client-search.html
+++ b/ClientManagerWebAPI/wwwroot/client-search/client-search.html
@@ -15,7 +15,7 @@
             <div class="top-row-container">
                 <h1 id="sidebar-header">Client Manager</h1>
                 <div class="search-container">
-                    <input class="search-bar" type="text" placeholder="Search..." />
+                    <input id="search-bar" type="text" placeholder="Search..." />
                     <div>
                         <button id="search-submit"><p id="search-submit-symbol">&#9906;</p></button>
                     </div>
@@ -28,113 +28,113 @@
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">John Doe</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">John Doe</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">John Doe</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">John Doe</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">Albert Something Einstein</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">Albert Something Einstein</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">Albert Something Einstein</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">Albert Something Einstein</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">Albert Something Einstein</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">Albert Something Einstein</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">Albert Something Einstein</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">Albert Something Einstein</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">Albert Something Einstein</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">Albert Something Einstein</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
             <li class="card">
                 <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text">Albert Something Einstein</h3>
-                    <h3 class="card-text">999-999-9999</h3>
+                    <h3 class="card-name">Albert Something Einstein</h3>
+                    <h3 class="card-phone">999-999-9999</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" value="Edit" />
-                    <input type="button" class="card-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
         </ul>
 
         <template id="results-item-template">
             <li class="card">
-                <img class="image" id="card-image" src="Untitled.jpg" />
+                <img class="image" src="Untitled.jpg" />
                 <div class="card-text-container">
-                    <h3 class="card-text" id="card-name">Name</h3>
-                    <h3 class="card-text" id="card-phone">Phone</h3>
+                    <h3 class="card-name">Name</h3>
+                    <h3 class="card-phone">Phone</h3>
                 </div>
                 <div class="card-button-container">
-                    <input type="button" class="card-button" id="edit-button" value="Edit" />
-                    <input type="button" class="card-button" id="delete-button" value="Delete" />
+                    <input type="button" class="edit-button" value="Edit" />
+                    <input type="button" class="delete-button" value="Delete" />
                 </div>
-                <p id="card-id" style="display:none"></p>
+                <p class="card-id" style="display:none"></p>
             </li>
         </template>
     </body>
