--- a/ClientManagerWebAPI/wwwroot/index.html
+++ b/ClientManagerWebAPI/wwwroot/index.html
@@ -25,102 +25,6 @@
         </div>
         <p id="results-text">Results</p>
         <ul class="results-grid">
-            <!--<li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">John Doe</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>
-            <li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">John Doe</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>
-            <li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">Albert Something Einstein</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>
-            <li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">Albert Something Einstein</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>
-            <li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">Albert Something Einstein</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>
-            <li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">Albert Something Einstein</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>
-            <li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">Albert Something Einstein</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>
-            <li class="card">
-                <img class="image" src="Untitled.jpg" />
-                <div class="card-text-container">
-                    <h3 class="card-name">Albert Something Einstein</h3>
-                    <h3 class="card-phone">999-999-9999</h3>
-                </div>
-                <div class="card-button-container">
-                    <input type="button" class="edit-button" value="Edit" />
-                    <input type="button" class="delete-button" value="Delete" />
-                </div>
-                <p class="card-id" style="display:none"></p>
-            </li>-->
         </ul>
 
         <template id="results-item-template">
@@ -140,6 +44,6 @@
     </body>
     
     <script type="module" src="index.js"></script>
-    <script type="module" src="modules/database-module.js"></script>
+    <script type="module" src="Modules/database-module.js"></script>
 
 </html>
