Added a remove button to each media Added TODOs at top of client-page.js

--- a/ClientManagerWebAPI/wwwroot/client-page/client-page.html
+++ b/ClientManagerWebAPI/wwwroot/client-page/client-page.html
@@ -55,6 +55,7 @@
                     </label>
                     <img class="media-image" />
                     <video class="media-video" controls></video>
+                    <button class="media-delete-button">X</button>
                 </form>
             </div>
             <button id="media-add">+</button>
@@ -79,6 +80,7 @@
                 </label>
                 <img class="media-image" />
                 <video class="media-video" controls disablepictureinpicture></video>
+                <button class="media-delete-button">X</button>
             </form>
         </template>
     </body>
