--- a/ClientManagerWebAPI/wwwroot/client-page/client-page.html
+++ b/ClientManagerWebAPI/wwwroot/client-page/client-page.html
@@ -23,7 +23,11 @@
         <div id="pigments-form-container">
             <h4>Pigments</h4>
             <form id="pigments-form">
-                <input type="text" name="pigment" placeholder="Pigment" />
+                <label class="pigment-label">
+                    Pigment
+                    <input type="text" name="pigment" placeholder="Pigment" />
+                    <button class="specific-pigment-delete">X</button>
+                </label>
             </form>
             <button id="pigment-add">+</button>
             <button id="pigment-remove">-</button>
@@ -31,7 +35,11 @@
         <div id="touchups-form-container">
             <h4>Touchups</h4>
             <form id="touchups-form">
-                <input type="date" name="touchup" />
+                <label class="touchup-label">
+                    Touchup Date:
+                    <input type="date" name="touchup" />
+                    <button class="specific-touchup-delete">X</button>
+                </label>
             </form>
             <button id="touchup-add">+</button>
             <button id="touchup-remove">-</button>
@@ -47,7 +55,7 @@
                     </label>
                     <label>
                         Before?
-                        <input type="checkbox" name="post-op" value="false" />
+                        <input type="checkbox" name="before" value="false" />
                     </label>
                     <label>
                         Set as avatar?
@@ -55,7 +63,7 @@
                     </label>
                     <img class="media-image" />
                     <video class="media-video" controls></video>
-                    <button class="media-delete-button">X</button>
+                    <button class="specific-media-delete">X</button>
                 </form>
             </div>
             <button id="media-add">+</button>
@@ -72,7 +80,7 @@
                 </label>
                 <label>
                     Before?
-                    <input type="checkbox" name="post-op" value="false" />
+                    <input type="checkbox" name="before" value="false" />
                 </label>
                 <label>
                     Set as avatar?
@@ -80,7 +88,7 @@
                 </label>
                 <img class="media-image" />
                 <video class="media-video" controls disablepictureinpicture></video>
-                <button class="media-delete-button">X</button>
+                <button class="specific-media-delete">X</button>
             </form>
         </template>
     </body>
