-Fixed an error when no search results are found -Changed Get50 to Get10 where applicable -Program wil now load first 10 results, and if more results are wanted will have a load more button -Made comment box able to expant vertically -Changed inputs from readonly to disabled when not editing and changed styling to stay the same when disabled

--- a/ClientManagerWebAPI/wwwroot/client-page/client-page.html
+++ b/ClientManagerWebAPI/wwwroot/client-page/client-page.html
@@ -46,7 +46,7 @@
                     </label>
                     <label class="input-label">
                         Comments:
-                        <input class="client-info-input" type="text" name="comments" />
+                        <span contenteditable class="client-info-input" id="comments"></span>
                     </label>
                 </div>
             </form>
