--- a/ClientManagerWebAPI/wwwroot/index.html
+++ b/ClientManagerWebAPI/wwwroot/index.html
@@ -24,8 +24,14 @@
             <input type="button" class="sidebar-button" value="Add a Client" />
         </div>
         <p id="results-text">Results</p>
-        <ul class="results-grid">
-        </ul>
+        <div id="results-container">
+            <ul class="results-grid">
+            </ul>
+            <p id="no-results">No Results Found</p>
+            <button id="load-more">Load More</button>
+        </div>
+        
+        
 
         <template id="results-item-template">
             <li class="card">
