-Changed kestrel hosting options to listen on the right port -Removed https kestrel hosting option -Made max size of zoomed-in images 95vh and vw -Fixed bug where "No Results Found" would display at incorrect times -Added a notification that the program is saving when both saving a new client and updating one -Videos now stream with range processing -Images and videos loading from the database now use the API link as the source instead of a blob, and blobs are now used only when image is changed when previewImage(e) is called -Back button's href is now assigned in javascript at load -Fixed minor spacing issue on images by making media-label-container's display none when not needed -Changed all fetches to use the host from window.location.origin, called ip in .js files -Added console logging for when fetch responses are not ok -Fixed some issues with styles not displaing properly on Safari -Updated appsettings.json to have default postgres port and use the default postgres database if an existing client_manager_db database is not found -FIxed an issue in DBSetup where client table would refer to the search dictionary before it was created -Removed Https redirection -Added the Http url ito the app in program.cs

--- a/ClientManagerWebAPI/wwwroot/client-page/client-page.html
+++ b/ClientManagerWebAPI/wwwroot/client-page/client-page.html
@@ -10,11 +10,14 @@
         <link rel="stylesheet" href="client-page-styles.css">
     </head>
     <body>
-        <div id="fullscreen-image-container">
+        <div id="fullscreen-image-container" class="fullscreen-container">
             <img id="fullscreen-image" />
         </div>
+        <div id="save-notification-container" class="fullscreen-container">
+            <p id="save-notification">Saving...</p>
+        </div>
         <div id="page-header">
-            <a href ="https://localhost:7082/" id="back-button"><i id="back-arrow"></i>Client Manager</a>
+            <a id="back-button"><i id="back-arrow"></i>Client Manager</a>
         </div>
         <div class="info-container">
             <form id="client-form">
@@ -54,12 +57,12 @@
                 <h4>Pigments</h4>
                 <form id="pigments-form">
                     <!--
-                    <label class="input-label">
-                        Pigment:
-                        <input type="text" name="pigment" placeholder="Pigment" />
-                        <button class="specific-pigment-delete invisible-when-viewing">X</button>
-                    </label>
-                    -->
+                <label class="input-label">
+                    Pigment:
+                    <input type="text" name="pigment" placeholder="Pigment" />
+                    <button class="specific-pigment-delete invisible-when-viewing">X</button>
+                </label>
+                -->
                 </form>
                 <button class="invisible-when-viewing" id="pigment-add">+</button>
                 <button class="invisible-when-viewing" id="pigment-remove">-</button>
@@ -67,7 +70,7 @@
             <div id="touchups-form-container">
                 <h4>Touchups</h4>
                 <form id="touchups-form">
-                <!--
+                    <!--
                 <label class="input-label">
                     Touchup Date:
                     <input type="date" name="touchup" />
